--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
       <artifactId>mysql-connector-j</artifactId>
     </dependency>
 
+    <!-- lombok依赖 -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
