--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
       <artifactId>lombok</artifactId>
     </dependency>
 
+    <!-- validation依赖 -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
