--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,19 @@
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
 
+    <!-- java-jwt坐标 -->
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+      <version>4.4.0</version>
+    </dependency>
+
+    <!-- 单元测试的坐标 -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
