--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
       <artifactId>spring-boot-starter-test</artifactId>
     </dependency>
 
+    <!-- pageHelper坐标 -->
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper-spring-boot-starter</artifactId>
+      <version>1.4.6</version>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
