--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,14 @@ spring:
     url: jdbc:mysql://localhost:3306/big_event
     username: root
     password: 123456
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 mybatis:
   configuration:
     map-underscore-to-camel-case: true  #开启驼峰命名和下划线命名的自动转换
+
+server:
+  port: 8080
